Update | Change logo text color

--- a/packages/renderer/app/assets/scss/colors.scss
+++ b/packages/renderer/app/assets/scss/colors.scss
@@ -7,4 +7,6 @@ $color-third-dark: #2c2d32;
 $color-third-medium: #34363c;
 $color-third-light: #414655;
 
+$color-fourth: #e6e6e6;
+
 $color-error: #ff194b;
