Update | Change colors

--- a/packages/renderer/app/assets/scss/colors.scss
+++ b/packages/renderer/app/assets/scss/colors.scss
@@ -1,6 +1,8 @@
-$color-main: #8f86eb;
+$color-main: #e72f75;
+$color-main-dark: #b41953;
 
-$color-second: #4f9666;
+$color-second: #8f86eb;
+$color-second-dark: #746cbe;
 
 $color-third: #1f2023;
 $color-third-dark: #2c2d32;
@@ -8,5 +10,7 @@ $color-third-medium: #34363c;
 $color-third-light: #414655;
 
 $color-fourth: #e6e6e6;
+$color-fourth-dark: #d2d2d2;
 
 $color-error: #ff194b;
+$color-disabled: #535353;
