Update | Replace titlebar color with variable

--- a/packages/renderer/app/layouts/main/titlebar/styles.scss
+++ b/packages/renderer/app/layouts/main/titlebar/styles.scss
@@ -1,7 +1,9 @@
+@import '@app/assets/scss/colors.scss';
+
 .container {
   display: flex;
   height: 26px;
-  background-color: #252525;
+  background-color: $color-third;
 }
 
 .movable-region {
