--- a/packages/renderer/app/components/common/input/styles.scss
+++ b/packages/renderer/app/components/common/input/styles.scss
@@ -7,10 +7,9 @@
   font: 14px 'MyriadProRegular';
   background-color: $color-third;
   color: $color-fourth;
-  border: 1px solid rgba(0, 0, 0, 0);
+  border: none;
   border-radius: 3px;
   outline: none;
-  transition: border 0.2s ease;
 
   &:disabled {
     background-color: $color-disabled;
