[Renderer] Update | Add new colors

--- a/packages/renderer/app/assets/scss/colors.scss
+++ b/packages/renderer/app/assets/scss/colors.scss
@@ -12,5 +12,7 @@ $color-third-light: #414655;
 $color-fourth: #e6e6e6;
 $color-fourth-dark: #d2d2d2;
 
+$color-fifth: #8c8c8c;
+
 $color-error: #ff194b;
 $color-disabled: #535353;
