--- a/packages/renderer/app/assets/scss/colors.scss
+++ b/packages/renderer/app/assets/scss/colors.scss
@@ -13,6 +13,7 @@ $color-fourth: #e6e6e6;
 $color-fourth-dark: #d2d2d2;
 
 $color-fifth: #8c8c8c;
+$color-fifth-medium: #a0a0a0;
 
 $color-error: #ff194b;
 $color-disabled: #535353;
