[Renderer] Update | Change server name styles

--- a/packages/renderer/app/pages/home/footer/server-name/styles.scss
+++ b/packages/renderer/app/pages/home/footer/server-name/styles.scss
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   height: 28px;
-  color: $color-fourth-dark;
+  color: $color-main;
   background-color: $color-third;
   font: 16px 'GilroyRegular';
   user-select: none;
