[Renderer] Update | Change server stats styles

--- a/packages/renderer/app/pages/home/footer/server-stats/styles.scss
+++ b/packages/renderer/app/pages/home/footer/server-stats/styles.scss
@@ -5,7 +5,7 @@
   align-items: center;
   padding-left: 12px;
   background-color: $color-third;
-  color: $color-fourth-dark;
+  color: #fff;
   font: 12px 'GilroyRegular';
   user-select: none;
 }
