[Renderer] Update | Change sorting button styles

--- a/packages/renderer/app/pages/home/serverboard/sorting-box/button-sort/styles.scss
+++ b/packages/renderer/app/pages/home/serverboard/sorting-box/button-sort/styles.scss
@@ -4,12 +4,19 @@
   padding-left: 10px;
   text-align: left;
   color: $color-fourth-dark;
+  color: $color-fifth-medium;
   background-color: $color-third !important;
+  border-right: 1px solid $color-third-light;
   border-radius: 0;
   transition: 0.2s ease;
 
   &:hover {
     transition: 0;
+    color: $color-fourth-dark;
     background-color: $color-third-light !important;
+  }
+
+  &:active {
+    color: #fff;
   }
 }
