--- a/packages/renderer/app/components/common/dialog-input/styles.scss
+++ b/packages/renderer/app/components/common/dialog-input/styles.scss
@@ -1,18 +1,26 @@
 @import '@app/assets/scss/colors.scss';
 
+.container {
+  width: 400px;
+}
+
 .input {
   display: block;
-  margin: 15px auto;
-  width: 260px;
+  margin: 20px auto;
+  width: 300px;
   line-height: 36px !important;
   font-size: 16px;
+
+  &::placeholder {
+    font-size: 14px;
+  }
 }
 
 .error {
   margin: 15px;
   text-align: center;
   color: $color-error;
-  font: 14px 'NotoSansRegular';
+  font: 14px 'GilroyRegular';
 
   &:empty {
     margin: 0;
