[Renderer] Update | Add new keyframes

--- a/packages/renderer/app/assets/scss/keyframes.scss
+++ b/packages/renderer/app/assets/scss/keyframes.scss
@@ -1,3 +1,12 @@
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @keyframes smooth-scale {
   from {
     transform: scale(0.8);
