[Renderer] Update | Change error color

--- a/packages/renderer/app/assets/scss/colors.scss
+++ b/packages/renderer/app/assets/scss/colors.scss
@@ -15,5 +15,5 @@ $color-fourth-dark: #d2d2d2;
 $color-fifth: #8c8c8c;
 $color-fifth-medium: #a0a0a0;
 
-$color-error: #ff194b;
+$color-error: #ff3333;
 $color-disabled: #535353;
