[Renderer] Update | Add disabled prop for icon-button component

--- a/packages/renderer/app/components/common/icon-button/styles.scss
+++ b/packages/renderer/app/components/common/icon-button/styles.scss
@@ -13,3 +13,11 @@
     background-color: $color-third-light;
   }
 }
+
+.disabled {
+  pointer-events: none;
+
+  & svg {
+    fill: $color-disabled !important;
+  }
+}
