--- a/packages/renderer/app/pages/home/serverboard/server-list/item-server/styles.scss
+++ b/packages/renderer/app/pages/home/serverboard/server-list/item-server/styles.scss
@@ -6,17 +6,16 @@
   width: 100%;
   color: $color-fourth;
   background-color: $color-third-dark;
-  border-bottom: 1px solid $color-third-light;
   font: 14px 'GilroyRegular';
   user-select: none;
 
-  &:last-of-type {
-    border: none;
+  &:nth-child(even) {
+    background-color: #3e3f46;
   }
 }
 
 .selected {
-  background-color: rgba(255, 255, 255, 0.12);
+  background-color: #5c53aa !important;
 }
 
 .padlock {
