--- a/packages/renderer/app/components/common/icon-button/styles.scss
+++ b/packages/renderer/app/components/common/icon-button/styles.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   cursor: pointer;
 
-  transition: 0.2s ease;
+  transition: background-color 0.2s ease;
 
   &:hover {
     transition: 0s;
