[Renderer] Update | assets

--- a/packages/renderer/app/assets/scss/colors.scss
+++ b/packages/renderer/app/assets/scss/colors.scss
@@ -2,7 +2,7 @@ $color-main: #e72f75;
 $color-main-dark: #b41953;
 
 $color-second: #8f86eb;
-$color-second-dark: #746cbe;
+$color-second-dark: #5c53aa;
 
 $color-third: #1f2023;
 $color-third-dark: #2c2d32;
