--- a/packages/renderer/app/assets/scss/fonts.scss
+++ b/packages/renderer/app/assets/scss/fonts.scss
@@ -17,3 +17,8 @@
   font-family: 'GilroyMedium';
   src: url('~@app/assets/fonts/Gilroy-Medium.woff');
 }
+
+@font-face {
+  font-family: 'GilroyBold';
+  src: url('~@app/assets/fonts/Gilroy-Bold.woff');
+}
