--- a/packages/renderer/app/assets/scss/keyframes.scss
+++ b/packages/renderer/app/assets/scss/keyframes.scss
@@ -7,11 +7,55 @@
   }
 }
 
-@keyframes smooth-scale {
+@keyframes scale {
   from {
     transform: scale(0.8);
   }
   to {
     transform: scale(1);
+  }
+}
+
+@keyframes slide-left {
+  0% {
+    transform: translateX(500px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-right {
+  0% {
+    transform: translateX(-500px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-top {
+  0% {
+    transform: translateY(200px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-bottom {
+  0% {
+    transform: translateY(-200px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
