--- a/packages/renderer/app/pages/home/footer/server-group/manage-group-dialog/group-list/item-group/control-box/styles.scss
+++ b/packages/renderer/app/pages/home/footer/server-group/manage-group-dialog/group-list/item-group/control-box/styles.scss
@@ -2,7 +2,7 @@
 
 .container {
   display: flex;
-  height: 100%; // TODO:
+  height: 100%;
 }
 
 .button {
@@ -20,5 +20,5 @@
 }
 
 .button-delete svg {
-  fill: #ff0000; // TODO: replace color with varialbe
+  fill: #ff0000;
 }
