--- a/packages/renderer/app/pages/home/footer/server-stats/styles.scss
+++ b/packages/renderer/app/pages/home/footer/server-stats/styles.scss
@@ -3,6 +3,7 @@
 .container {
   display: flex;
   align-items: center;
+  margin: 0;
   padding-left: 12px;
   background-color: $color-third;
   color: #fff;
