--- a/packages/renderer/app/pages/home/serverboard/server-list/item-server/styles.scss
+++ b/packages/renderer/app/pages/home/serverboard/server-list/item-server/styles.scss
@@ -15,7 +15,7 @@
 }
 
 .selected {
-  background-color: #5c53aa !important;
+  background-color: $color-second-dark !important;
 }
 
 .padlock {
@@ -51,7 +51,7 @@
 }
 
 .mode {
-  width: 155px;
+  width: 156px;
 }
 
 .language {
